<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#95000000" />

    <ScrollView
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="-38dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/aldrich"
                android:text="Login"
                android:textColor="#D8F8F4F4"
                android:textSize="44sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="329dp"
                android:layout_height="48dp"
                android:layout_marginTop="56dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="329dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_baseline_security_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/inputEmail"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="Forget Password?"
                android:textColor="@color/white"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="@+id/inputPassword"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginTop="24dp"

                android:text="Login"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/inputPassword"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="Create new Account?"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/btnLogin"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/btnLogin"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="OR"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <View
                android:id="@+id/view10"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="@+id/btnLogin"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <View

                android:id="@+id/view9"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginEnd="16dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintEnd_toStartOf="@+id/textView7"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/btnLogin"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <ImageView
                android:id="@+id/btnPhone"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="@+id/view10"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2"
                app:srcCompat="@drawable/phone_logo" />

            <ImageView
                android:id="@+id/btnGoogle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/view9"
                app:layout_constraintTop_toTopOf="@+id/imageView2"
                app:srcCompat="@drawable/google_logo" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:srcCompat="@drawable/facebook_logo" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>