<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/bg2">
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#95000000" />

    <ScrollView
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/aldrich"
                android:text="Register"
                android:textColor="#D8F8F4F4"
                android:textSize="44sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="329dp"
                android:layout_height="48dp"
                android:layout_marginTop="56dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="329dp"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_baseline_security_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/inputEmail"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

            <EditText
                android:id="@+id/inputPassword2"
                android:layout_width="329dp"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_baseline_security_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="17dp"
                app:layout_constraintEnd_toEndOf="@+id/inputPassword"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/inputPassword"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

            <Button
                android:id="@+id/regButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/input_bg"
                android:text="Register"
                app:layout_constraintEnd_toEndOf="@+id/inputPassword2"
                app:layout_constraintStart_toStartOf="@+id/inputPassword2"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Already Having Account?"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/regButton"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/regButton"
                app:layout_constraintTop_toBottomOf="@+id/regButton" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>